--- a/examples/train_full/qwen2_5vl_full_sft.yaml
+++ b/examples/train_full/qwen2_5vl_full_sft.yaml
@@ -8,39 +8,40 @@ trust_remote_code: true
 stage: sft
 do_train: true
 finetuning_type: full
-freeze_vision_tower: true
-freeze_multi_modal_projector: true
+freeze_vision_tower: false
+freeze_multi_modal_projector: false
 freeze_language_model: false
 deepspeed: examples/deepspeed/ds_z3_config.json
 
 ### dataset
-dataset: mllm_demo,identity,alpaca_en_demo
+dataset: radvlm_dataset
 template: qwen2_vl
-cutoff_len: 2048
-max_samples: 1000
-overwrite_cache: true
-preprocessing_num_workers: 16
-dataloader_num_workers: 4
+cutoff_len: 131072
+max_samples: 10000000
+tokenized_path: /capstor/scratch/cscs/ndeperr/checkpoints/qwen2vl_cs_long/tokenizer
+overwrite_cache: false
+preprocessing_num_workers: 64
+dataloader_num_workers: 32
 
 ### output
-output_dir: saves/qwen2_5vl-7b/full/sft
+output_dir: /capstor/scratch/cscs/ndeperr/checkpoints/qwen2vl_cs_long/
 logging_steps: 10
-save_steps: 500
+save_steps: 200
 plot_loss: true
-overwrite_output_dir: true
+overwrite_output_dir: false
 save_only_model: false
-report_to: none  # choices: [none, wandb, tensorboard, swanlab, mlflow]
+report_to: wandb  # choices: [none, wandb, tensorboard, swanlab, mlflow]
 
 ### train
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
 learning_rate: 1.0e-5
-num_train_epochs: 3.0
+num_train_epochs: 1.0
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
 ddp_timeout: 180000000
-resume_from_checkpoint: null
+# resume_from_checkpoint: /capstor/scratch/cscs/ndeperr/checkpoints/qwen2vl_cs_test/checkpoint-500
 
 ### eval
 # val_size: 0.1
